autotests/syntax-tests/tests/negative/negative97.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var $LABEL Name Name = ; = ; } ; 